--- a/workworkwork-bht.ipynb
+++ b/workworkwork-bht.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,9 @@
     "import time\n",
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
-    "from urllib.request import Request"
+    "from urllib.request import Request\n",
+    "import difflib\n",
+    "from nltk.stem import WordNetLemmatizer "
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -56,20 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'LemmaDB' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-92-608a7d11fc2b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mlemma_full_word_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mword_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mword\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlemma\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mlemma_full_word_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mlemma_full_word_list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'LemmaDB' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "#Lemmatization\n",
     "lemma_full_word_list = []\n",
     "for i in word_list:\n",
     "    word = lemma(i)\n",
-    "    lemma_full_word_list.append(word)"
+    "    lemma_full_word_list.append(word)\n",
+    "lemma_full_word_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -152,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -240,27 +255,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2953</th>\n",
-       "      <td>fuz</td>\n",
+       "      <td>jeer</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2954</th>\n",
-       "      <td>helper</td>\n",
+       "      <td>peg</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2955</th>\n",
-       "      <td>pouch</td>\n",
+       "      <td>lattice</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2956</th>\n",
-       "      <td>tingle</td>\n",
+       "      <td>fingertip</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2957</th>\n",
-       "      <td>four-thirty</td>\n",
+       "      <td>precisely</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -269,23 +284,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       Vocabulary  counts\n",
-       "0            jake     230\n",
-       "1          portia     214\n",
-       "2            mick     214\n",
-       "3        copeland     205\n",
-       "4            biff     182\n",
-       "...           ...     ...\n",
-       "2953          fuz       1\n",
-       "2954       helper       1\n",
-       "2955        pouch       1\n",
-       "2956       tingle       1\n",
-       "2957  four-thirty       1\n",
+       "     Vocabulary  counts\n",
+       "0          jake     230\n",
+       "1        portia     214\n",
+       "2          mick     214\n",
+       "3      copeland     205\n",
+       "4          biff     182\n",
+       "...         ...     ...\n",
+       "2953       jeer       1\n",
+       "2954        peg       1\n",
+       "2955    lattice       1\n",
+       "2956  fingertip       1\n",
+       "2957  precisely       1\n",
        "\n",
        "[2958 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2051,6 +2066,126 @@
     "    fileObject.write(css)\n",
     "fileObject.close()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Similar words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csvFile = open(\"The Heart is a Lonely Hunter_VocabCount_v4.csv\", \"r\")\n",
+    "reader = csv.reader(csvFile)\n",
+    "match_word_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in reader:\n",
+    "    match_word = difflib.get_close_matches(i[0], set(word_list),10,0.2)\n",
+    "    match_word_list.append(match_word)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"The Heart is a Lonely Hunter_VocabCount_v7.csv\",\"w\",newline = '') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    writer.writerows(match_word_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['prop', 'plop', 'pp', 'pulp', 'plup', 'happy']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "difflib.get_close_matches('prop', ['plup','prop','happy','pp','plop','pulp'],10,0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Phrase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_list=[['bring','out'],['look','in','the','eye'],['dream','of'],['want','to'],['turn','out','of']]\n",
+    "raw_phrase_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(word_list)):\n",
+    "    for j in phrase_list:\n",
+    "        if word_list[i] == j[0] and j[-1] in word_list[i+1:i+5]:\n",
+    "            if j[-2] in word_list[i:i+4]:\n",
+    "                raw_phrase_list.append(j)\n",
+    "            else:\n",
+    "                continue                \n",
+    "        else:\n",
+    "            continue\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phrase_count = pd.value_counts(raw_phrase_list)\n",
+    "data = pd.DataFrame({'Phrase':phrase_count.index, 'counts':phrase_count.values})\n",
+    "data.to_csv(\"phrasecounts.csv\",index=False,header=True)"
    ]
   },
   {
