--- a/CLEAREAD-v0.ipynb
+++ b/CLEAREAD-v0.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T15:13:35.325528Z",
-     "start_time": "2020-06-28T15:13:30.627152Z"
+     "end_time": "2020-07-09T13:39:26.794979Z",
+     "start_time": "2020-07-09T13:39:26.277361Z"
     }
    },
    "outputs": [],
@@ -43,89 +43,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T15:17:29.088972Z",
-     "start_time": "2020-06-28T15:17:29.073989Z"
+     "end_time": "2020-07-09T13:39:26.818928Z",
+     "start_time": "2020-07-09T13:39:26.801959Z"
     }
    },
    "outputs": [],
    "source": [
-    "master_word_dict = {}\n",
-    "\n",
-    "HP1_word_final = []\n",
-    "csvFile = open(\"HP1vocabularycounts_v2.5.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP1_word_final.append(i[0])\n",
-    "master_word_dict['HP1'] = HP1_word_final\n",
-    "\n",
-    "HP2_word_final = []\n",
-    "csvFile = open(\"HP2vocabularycounts_v2.5.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP2_word_final.append(i[0])\n",
-    "master_word_dict['HP2'] = HP2_word_final\n",
-    "\n",
-    "HP3_word_final = []\n",
-    "csvFile = open(\"HP3vocabularycounts_v2.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP3_word_final.append(i[0])\n",
-    "master_word_dict['HP3'] = HP3_word_final\n",
-    "\n",
-    "HP4_word_final = []\n",
-    "csvFile = open(\"HP4vocabularycounts_v2.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP4_word_final.append(i[0])\n",
-    "master_word_dict['HP4'] = HP4_word_final\n",
-    "\n",
-    "HP5_word_final = []\n",
-    "csvFile = open(\"HP5vocabularycounts_v2.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP5_word_final.append(i[0])\n",
-    "master_word_dict['HP5'] = HP5_word_final\n",
-    "\n",
-    "HP6_word_final = []\n",
-    "csvFile = open(\"HP6vocabularycounts_v2.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP6_word_final.append(i[0])\n",
-    "master_word_dict['HP6'] = HP6_word_final\n",
-    "\n",
-    "HP7_word_final = []\n",
-    "csvFile = open(\"HP7vocabularycounts_v2.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    HP7_word_final.append(i[0])\n",
-    "master_word_dict['HP7'] = HP7_word_final\n",
-    "\n",
-    "Heartisthelonelyhunter_word_final = []\n",
-    "csvFile = open(\"TheHeartisthelonelyhuntervocabularycounts_v2.5.csv\", \"r\")\n",
-    "reader = csv.reader(csvFile)\n",
-    "for i in reader:\n",
-    "    Heartisthelonelyhunter_word_final.append(i[0])\n",
-    "master_word_dict['Heart is the Lonely Hunter'] = Heartisthelonelyhunter_word_final\n",
-    "csvFile.close()"
+    "with open(\"master_word_list.json\",'r') as load_f:\n",
+    "    master_word_dict = json.load(load_f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-10T02:16:17.854950Z",
+     "start_time": "2020-07-10T02:16:17.788129Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Easy word list\n",
     "CET4_list = []\n",
     "\n",
-    "with open('CET-4_Vocab.txt','r',encoding='utf-8') as fhandle:\n",
+    "with open('CET-4_Vocab_v2.txt','r',encoding='utf-8') as fhandle:\n",
     "    for line in fhandle:\n",
+    "        line=line.lower()\n",
     "        if line.startswith(('a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z')):\n",
     "            word = re.findall('([a-z]+)',line)\n",
-    "            CET4_list.append(word[0])\n",
+    "            CET4_list.append(word[0].lower().rstrip())\n",
     "        else:\n",
     "            continue\n",
     "\n",
@@ -154,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T15:09:41.485745Z",
-     "start_time": "2020-06-28T15:09:37.776192Z"
+     "end_time": "2020-07-09T13:40:37.901165Z",
+     "start_time": "2020-07-09T13:40:17.653297Z"
     }
    },
    "outputs": [
@@ -166,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the name of the bookTheHeartisthelonelyhuntervocabularycounts_v2.5\n"
+      "enter the name of the bookTender is the Night\n"
      ]
     }
    ],
@@ -176,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-28T15:09:43.480395Z",
-     "start_time": "2020-06-28T15:09:43.476383Z"
+     "end_time": "2020-07-09T13:40:45.565673Z",
+     "start_time": "2020-07-09T13:40:39.160799Z"
     }
    },
    "outputs": [],
@@ -206,14 +156,14 @@
     "#select unfamiliar words\n",
     "raw_word_list = []\n",
     "for word in lemma_word_list:\n",
-    "    if word not in lemma_easy_word_list:\n",
+    "    if word not in easy_word_list:\n",
     "        raw_word_list.append(word)\n",
     "    else:\n",
     "        continue    \n",
     "\n",
     "\n",
     "#count the word\n",
-    "word_count = pd.value_counts(raw_word_clean_list)\n",
+    "word_count = pd.value_counts(raw_word_list)\n",
     "data = pd.DataFrame({'Vocabulary':word_count.index, 'counts':word_count.values})\n",
     "        \n",
     "# point out where the replicate comes from\n",
@@ -230,6 +180,18 @@
     "            \n",
     "data.to_csv( bookname + \"vocabularycounts_v0.csv\",index=False,header=True)            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-08T15:28:41.968300Z",
+     "start_time": "2020-07-08T15:28:41.962320Z"
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
