--- a/CLEAREAD-v3.ipynb
+++ b/CLEAREAD-v3.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T02:47:28.901010Z",
-     "start_time": "2020-06-29T02:47:23.924956Z"
+     "end_time": "2020-07-09T15:22:19.108487Z",
+     "start_time": "2020-07-09T15:22:06.797516Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T02:47:47.322710Z",
-     "start_time": "2020-06-29T02:47:28.904003Z"
+     "end_time": "2020-07-09T15:22:38.202609Z",
+     "start_time": "2020-07-09T15:22:19.110482Z"
     }
    },
    "outputs": [
@@ -81,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T02:47:19.786500Z",
-     "start_time": "2020-06-29T02:46:49.999797Z"
+     "end_time": "2020-07-09T15:23:00.092090Z",
+     "start_time": "2020-07-09T15:22:38.234525Z"
     }
    },
    "outputs": [
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the name of the v2fileHeartistheonlyhuntervocabularycounts_v2\n"
+      "enter the name of the v2fileTender is the Nightvocabularycounts_v2\n"
      ]
     }
    ],
@@ -106,8 +106,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T02:55:51.939360Z",
-     "start_time": "2020-06-29T02:47:48.778682Z"
+     "end_time": "2020-07-09T15:43:41.911718Z",
+     "start_time": "2020-07-09T15:34:56.890722Z"
     }
    },
    "outputs": [
@@ -115,6 +115,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "chauffeur\n",
+      "lausanne\n",
+      "mediterranean\n",
+      "consulate\n",
+      "quirinal\n",
+      "rue\n",
+      "funicular\n",
+      "monte\n",
+      "formidable\n",
+      "detach\n",
+      "phonograph\n",
+      "valet\n",
+      "chasseur\n",
+      "buffalo\n",
+      "excelsior\n",
+      "slant\n",
+      "belittle\n",
+      "psychiatrist\n",
+      "arc\n",
+      "apologetically\n",
+      "monocle\n",
+      "menace\n",
+      "peignoir\n",
+      "facetious\n",
+      "gendarme\n",
+      "herald\n",
+      "frantic\n",
+      "espadrille\n",
+      "sleigh\n",
+      "reiterate\n",
+      "stunt\n",
+      "petit\n",
+      "metallic\n",
+      "bizarre\n",
+      "exigent\n",
+      "mingle\n",
+      "cavalry\n",
+      "neurosis\n",
+      "alp\n",
+      "sanitarium\n",
       "ready for chinese translation\n"
      ]
     }
@@ -124,9 +164,10 @@
     "reader = csv.reader(csvFile)\n",
     "\n",
     "# API id and key\n",
-    "app_id = '05d6c109'\n",
-    "app_key = '63bda9528e24dff26ca5dd695b008acf'\n",
+    "app_id = '491e882b'\n",
+    "app_key = 'a0b004ca6b5f7f4e820832f3dc934355'\n",
     "\n",
+    "word_pron_char_defin_cate=[]\n",
     "for i in reader:\n",
     "    try:\n",
     "        category = re.findall(\"[a-z]+\\-?[a-z]+\", df.loc[df['word']== i[0] ,'tag'].to_string())\n",
@@ -146,6 +187,7 @@
     "            char = r.json()[\"results\"][0]['lexicalEntries'][0]['lexicalCategory']['text']\n",
     "            defin = r.json()[\"results\"][0]['lexicalEntries'][0]['entries'][0]['senses'][0]['definitions'][0]\n",
     "            word_pron_char_defin_cate.append([i[0],'/'+pron+'/',char,defin,cate])\n",
+    "            print(word_id)\n",
     "            time.sleep(10)\n",
     "        except KeyError :\n",
     "            pass\n",
@@ -190,11 +232,113 @@
     "        result_all = response.read().decode(\"utf-8\")\n",
     "        result = json.loads(result_all)['trans_result'][0]['dst']\n",
     "        i.append(result)\n",
+    "        print(result)\n",
     "        word_pron_char_defin_cate_cn.append(i)\n",
     "\n",
     "\n",
     "    except Exception as e:\n",
     "        pass\n",
+    "\n",
+    "fileObject = open(filename + '_v3.txt', 'w',encoding='utf-8')\n",
+    "for i in word_pron_char_defin_cate_cn:\n",
+    "    for j in i:\n",
+    "        fileObject.write(j)\n",
+    "        fileObject.write(' ')\n",
+    "    fileObject.write('\\n')\n",
+    "fileObject.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-07-09T16:02:09.143958Z",
+     "start_time": "2020-07-09T16:01:55.063576Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "司机\n",
+      "洛桑\n",
+      "地中海\n",
+      "领事馆\n",
+      "奇里纳尔\n",
+      "吕\n",
+      "索\n",
+      "蒙特\n",
+      "可怕的\n",
+      "分离\n",
+      "留声机\n",
+      "男仆\n",
+      "查瑟尔\n",
+      "水牛\n",
+      "精益求精\n",
+      "倾斜\n",
+      "轻视\n",
+      "精神病医生\n",
+      "弧\n",
+      "抱歉地\n",
+      "单眼镜\n",
+      "威胁\n",
+      "皮诺伊尔\n",
+      "滑稽的\n",
+      "宪兵\n",
+      "先驱\n",
+      "疯狂的\n",
+      "西班牙\n",
+      "雪橇\n",
+      "重申\n",
+      "特技\n",
+      "小矮子\n",
+      "金属的\n",
+      "奇怪的\n",
+      "急迫的\n",
+      "混在一起\n",
+      "骑兵\n",
+      "神经症\n",
+      "阿尔卑斯山\n",
+      "疗养院\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Baidu API for EN-CN Translate\n",
+    "appid = '20200627000507736'  # 填写你的appid\n",
+    "secretKey = 'G3ghonyD9dfI39NnFtGN'  # 填写你的密钥\n",
+    "\n",
+    "httpClient = None\n",
+    "myurl = '/api/trans/vip/translate'\n",
+    "\n",
+    "fromLang = 'en'   #原文语种\n",
+    "toLang = 'zh'   #译文语种\n",
+    "\n",
+    "word_pron_char_defin_cate_cn = []\n",
+    "for i in word_pron_char_defin_cate:\n",
+    "    salt = random.randint(32768, 65536)\n",
+    "    sign = appid + i[0] + str(salt) + secretKey\n",
+    "    sign = hashlib.md5(sign.encode()).hexdigest()\n",
+    "    myurl = myurl + '?appid=' + appid + '&q=' + urllib.parse.quote(i[0]) + '&from=' + fromLang + '&to=' + toLang + '&salt=' + str(salt) + '&sign=' + sign\n",
+    "\n",
+    "    try:\n",
+    "        httpClient = http.client.HTTPConnection('api.fanyi.baidu.com')\n",
+    "        httpClient.request('GET', myurl)\n",
+    "\n",
+    "        # response是HTTPResponse对象\n",
+    "        response = httpClient.getresponse()\n",
+    "        result_all = response.read().decode(\"utf-8\")\n",
+    "        result = json.loads(result_all)['trans_result'][0]['dst']\n",
+    "        i.append(result)\n",
+    "        print(result)\n",
+    "        word_pron_char_defin_cate_cn.append(i)\n",
+    "\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        pass\n",
+    "    continue\n",
     "\n",
     "fileObject = open(filename + '_v3.txt', 'w',encoding='utf-8')\n",
     "for i in word_pron_char_defin_cate_cn:\n",
