--- a/CLEAREAD-WechatDeleteImg.ipynb
+++ b/CLEAREAD-WechatDeleteImg.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T05:05:15.294582Z",
-     "start_time": "2020-06-29T05:05:15.290591Z"
+     "end_time": "2020-07-07T09:24:41.069975Z",
+     "start_time": "2020-07-07T09:24:40.713926Z"
     }
    },
    "outputs": [],
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T05:05:16.758332Z",
-     "start_time": "2020-06-29T05:05:16.752380Z"
+     "end_time": "2020-07-07T09:24:41.093913Z",
+     "start_time": "2020-07-07T09:24:41.088925Z"
     }
    },
    "outputs": [],
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T05:05:20.382552Z",
-     "start_time": "2020-06-29T05:05:18.879579Z"
+     "end_time": "2020-07-07T09:24:43.666163Z",
+     "start_time": "2020-07-07T09:24:42.016532Z"
     }
    },
    "outputs": [
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "how many images need to delete311\n"
+      "how many images need to delete1000\n"
      ]
     }
    ],
@@ -63,32 +63,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-29T05:06:38.449845Z",
-     "start_time": "2020-06-29T05:05:21.028459Z"
+     "end_time": "2020-07-07T09:30:10.838166Z",
+     "start_time": "2020-07-07T09:25:47.429430Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "APILimitedException",
+     "evalue": "Error code: 45009, message: reach max api daily quota limit hints: [OiddWTHCe-Z4.B1a!]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAPILimitedException\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-b88a3f5e6047>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mresp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmaterial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatchget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmedia_type\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"image\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moffset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mresp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'item'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mwx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmaterial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'media_id'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\apps\\Anaconda\\lib\\site-packages\\wechatpy\\client\\api\\material.py\u001b[0m in \u001b[0;36mdelete\u001b[1;34m(self, media_id)\u001b[0m\n\u001b[0;32m    107\u001b[0m             \u001b[1;34m'material/del_material'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m             data={\n\u001b[1;32m--> 109\u001b[1;33m                 \u001b[1;34m'media_id'\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mmedia_id\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    110\u001b[0m             }\n\u001b[0;32m    111\u001b[0m         )\n",
+      "\u001b[1;32mD:\\apps\\Anaconda\\lib\\site-packages\\wechatpy\\client\\api\\base.py\u001b[0m in \u001b[0;36m_post\u001b[1;34m(self, url, **kwargs)\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'API_BASE_URL'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'api_base_url'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAPI_BASE_URL\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_client\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\apps\\Anaconda\\lib\\site-packages\\wechatpy\\client\\base.py\u001b[0m in \u001b[0;36mpost\u001b[1;34m(self, url, **kwargs)\u001b[0m\n\u001b[0;32m    183\u001b[0m             \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'post'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    184\u001b[0m             \u001b[0murl_or_endpoint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 185\u001b[1;33m             \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    186\u001b[0m         )\n\u001b[0;32m    187\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\apps\\Anaconda\\lib\\site-packages\\wechatpy\\client\\base.py\u001b[0m in \u001b[0;36m_request\u001b[1;34m(self, method, url_or_endpoint, **kwargs)\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m         return self._handle_result(\n\u001b[1;32m--> 102\u001b[1;33m             \u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0murl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult_processor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m         )\n\u001b[0;32m    104\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\apps\\Anaconda\\lib\\site-packages\\wechatpy\\client\\base.py\u001b[0m in \u001b[0;36m_handle_result\u001b[1;34m(self, res, method, url, result_processor, **kwargs)\u001b[0m\n\u001b[0;32m    153\u001b[0m                     \u001b[0mclient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    154\u001b[0m                     \u001b[0mrequest\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 155\u001b[1;33m                     \u001b[0mresponse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    156\u001b[0m                 )\n\u001b[0;32m    157\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAPILimitedException\u001b[0m: Error code: 45009, message: reach max api daily quota limit hints: [OiddWTHCe-Z4.B1a!]"
+     ]
+    }
+   ],
    "source": [
     "i = 1\n",
     "while i < (int(a)//20)+1:\n",
     "    media_id_list = []\n",
     "    resp = wx.material.batchget(media_type=\"image\",offset=0,count=20)\n",
     "    for j in resp['item']:\n",
-    "        media_id_list.append(j['media_id'])\n",
-    "    for j in media_id_list:\n",
-    "        wx.material.delete(j)\n",
+    "        wx.material.delete(j['media_id'])\n",
     "    i = i + 1\n",
     "\n",
     "#delete the rest\n",
     "resp = wx.material.batchget(media_type=\"image\",offset=0,count=20)\n",
     "for j in resp['item']:\n",
-    "        media_id_list.append(j['media_id'])\n",
-    "    for j in media_id_list:\n",
-    "        wx.material.delete(j)"
+    "        wx.material.delete(j['media_id'])"
    ]
   },
   {
